small fix to light/dark mode buttons

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ header {
 }
 
 button {
-    width: 80px;
+    width: 70px;
     height: 20px;
 }
 
